fix: gallery image alignment

--- a/src/styles/partials/gallery.styl
+++ b/src/styles/partials/gallery.styl
@@ -14,6 +14,7 @@
       max-width: w
       flex: 1 0 w
       margin-right: $spacing.lg
+      align-self: center
 
       +hd()
         w = s('calc(50% - %s)', $spacing.xxhg)
